--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>home</title>
-    <link rel="stylesheet" href="nav-footer.css">
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="home-style.css">
+    <link rel="stylesheet" href="CSS/nav-footer.css">
+    <link rel="stylesheet" href="CSS/normalize.css">
+    <link rel="stylesheet" href="CSS/home-style.css">
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
 </head>
 <body>
