--- a/introduce-bread.html
+++ b/introduce-bread.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="nav-footer.css">
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="introduce-style.css">
+    <link rel="stylesheet" href="CSS/nav-footer.css">
+    <link rel="stylesheet" href="CSS/normalize.css">
+    <link rel="stylesheet" href="CSS/introduce-style.css">
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
     <title>introduce-bread</title>
 </head>
