--- a/products.html
+++ b/products.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="grid.css">
-    <link rel="stylesheet" href="nav-footer.css">   
-    <link rel="stylesheet" href="products-style.css">
+    <link rel="stylesheet" href="CSS/nav-footer.css">
+    <link rel="stylesheet" href="CSS/grid.css">
+    <link rel="stylesheet" href="CSS/nav-footer.css">   
+    <link rel="stylesheet" href="CSS/products-style.css">
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
     <title>products</title>
 </head>
