新增元件css+ qna news-detail 切版

--- a/qna.html
+++ b/qna.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/nav-footer.css">
     <link rel="stylesheet" href="CSS/qna-style.css">
+    <link rel="stylesheet" href="CSS/component-set.css">
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
     <title>qna</title>
 </head>
@@ -41,10 +42,10 @@
         <div class="wrap">
             <div class="wrap-item">
                 <div class="bread-crumbs">
-                    <ul>
-                        <li><a href="#">首頁</a></li>
-                        <li><a >常見問題</a></li>
-                    </ul>
+                <ul>
+                    <li><a href="#">首頁</a></li>
+                    <li><a >常見問題</a></li>
+                </ul>
                 </div>
                 <div class="item">
                     <div class="question">
@@ -115,7 +116,7 @@
                     <div class="answer">
                         <p>網站有最新消息可以瀏覽，此外〈日光小麥所〉有Instagram和Facebook，歡迎有興趣的顧客追蹤。
                             <br>
-                            IG：@NikkoBakery    FB：日光小麥所
+                            <span>IG：@NikkoBakery  <br>FB：日光小麥所</span>
                             <br>
                             可於網站左方點選icon連結</p>
                     </div>
