--- a/products-detail.html
+++ b/products-detail.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/nav-footer.css">
     <link rel="stylesheet" href="CSS/productsdetail-style.css">
+    <link rel="stylesheet" href="CSS/component-set.css">
+    <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
     <title>products-detail</title>
 </head>
 <body>
@@ -44,6 +46,67 @@
                         <li><a href="#">首頁</a></li>
                         <li><a href="#">購買麵包</a></li>
                     </ul>
+                </div>
+                <div class="order-section">
+                    <div class="pic">
+                        <div class="lg-pic">
+                            <img src="https://picsum.photos/616/596/?random=10">
+                        </div>
+                        <div class="sm-pic-list">
+                            <div class="sm-pic">
+                                <img src="https://picsum.photos/130/130/?random=10">
+                            </div>
+                        </div>
+                        <div class="sm-pic-list">
+                            <div class="sm-pic">
+                                <img src="https://picsum.photos/130/130/?random=10">
+                            </div>
+                        </div>
+                        <div class="sm-pic-list">
+                            <div class="sm-pic">
+                                <img src="https://picsum.photos/130/130/?random=10">
+                            </div>
+                        </div>
+                        <div class="sm-pic-list">
+                            <div class="sm-pic">
+                                <img src="https://picsum.photos/130/130/?random=10">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="buy">
+                        <div class="title">
+                            <h2>純鮮奶吐司</h2>
+                        </div>
+                        <p>純鮮奶吐司片，以新鮮牛奶融入吐司之中，擁有柔軟的質地，並散發著濃郁的鮮奶香氣。</p>
+                        <div class="price-tag">
+                            <div class="price"><span>$50</span></div>
+                            <div class="tag"><span>鮮奶</span></div>
+                        </div>
+                        <div class="btn">
+                            <div class="amount">
+                                <span class="minus"></span>
+                                <span class="number">1</span>
+                                <span class="plus"></span>
+                            </div>
+                            <div class="shop"><span>加入購物車</span></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="description">
+                    <div class="switch">
+                        <div class="preserve"><a href="#">如何保存</a></div>
+                        <div class="yummy"><a href="#">怎麼吃最美味</a></div>
+                    </div>
+                    <div class="text">
+                        <p>以下是一些建議的保存方法：   </p>
+                        <ul>
+                            <li> 密封保存： 將純鮮奶吐司放入密封袋或保鮮盒中，以減少空氣流通，防止麵包變乾。確保密封器處於密封狀態，防止空氣進入。</li>
+                            <li>. 避免光照： 將吐司放在陰涼處，遠離陽光直射。陽光可能會使麵包表面變硬，同時影響內部的口感。</li>
+                            <li> 避免冷凍： 儘量避免將純鮮奶吐司冷凍，因為冷凍可能會影響麵包的質地和口感。如果計劃長時間保存，可以將吐司分切成小片，單層放在冷凍袋中，以便分次取用。</li>
+                            <li> 分開保存： 如果有多片吐司，可以考慮將它們分開保存，以防止它們相互粘附，影響口感。</li>
+                        </ul>
+                        <p>總的來說，密封、避光、遠離極端溫度是保存純鮮奶吐司的基本原則。按照這些建議，可以確保吐司在保存期間保持最佳的風味和質地。</p>
+                    </div>
                 </div>
             </div>
         </div>
