--- a/products.html
+++ b/products.html
@@ -5,8 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/nav-footer.css">
     <link rel="stylesheet" href="CSS/grid.css">
-    <link rel="stylesheet" href="CSS/nav-footer.css">   
+    <link rel="stylesheet" href="CSS/normalize.css">   
     <link rel="stylesheet" href="CSS/products-style.css">
+    <link rel="stylesheet" href="CSS/component-set.css">
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
     <title>products</title>
 </head>
