--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                 </div>
             </div>
         </div>
-        <div class="banner">        
+        <div class="home-banner">        
         </div>
-        <div class="head-bg"></div>
+        <div class="homehead-bg"></div>
         <div class="wrap-home">
             <div class="concept">
                     <div class="concept-pic">
