--- a/news-detail.html
+++ b/news-detail.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="CSS/newsdetail-style.css">
     <link rel="stylesheet" href="CSS/component-set.css">
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
-    <title>news</title>
+    <title>news-detail</title>
 </head>
 <body>
     <div class="container">
