--- a/products-detail.html
+++ b/products-detail.html
@@ -54,23 +54,17 @@
                         </div>
                         <div class="sm-pic-list">
                             <div class="sm-pic">
-                                <img src="https://picsum.photos/130/130/?random=10">
-                            </div>
-                        </div>
-                        <div class="sm-pic-list">
+                                <img src="https://picsum.photos/120/120/?random=10">
+                            </div>                       
                             <div class="sm-pic">
-                                <img src="https://picsum.photos/130/130/?random=10">
+                                <img src="https://picsum.photos/120/120/?random=10">
                             </div>
-                        </div>
-                        <div class="sm-pic-list">
                             <div class="sm-pic">
-                                <img src="https://picsum.photos/130/130/?random=10">
+                                <img src="https://picsum.photos/120/120/?random=10">
                             </div>
-                        </div>
-                        <div class="sm-pic-list">
                             <div class="sm-pic">
-                                <img src="https://picsum.photos/130/130/?random=10">
-                            </div>
+                                <img src="https://picsum.photos/120/120/?random=10">
+                            </div> 
                         </div>
                     </div>
                     <div class="buy">
@@ -82,30 +76,45 @@
                             <div class="price"><span>$50</span></div>
                             <div class="tag"><span>鮮奶</span></div>
                         </div>
-                        <div class="btn">
-                            <div class="amount">
-                                <span class="minus"></span>
-                                <span class="number">1</span>
-                                <span class="plus"></span>
+                        <div class="btn-list">
+                            <div class="amount btn">
+                                <span class="minus"><i class="fa-solid fa-minus" style="color: #60222b;"></i>
+                                </span>
+                                <input type="numder" value="1" min="1" class="buy-number" >
+                                <span class="plus">
+                                    <i class="fa-solid fa-plus" style="color: #60222b;"></i>
+                                </span>
                             </div>
-                            <div class="shop"><span>加入購物車</span></div>
+                            <div class="btn"><button class="shop ">加入購物車</button></div>
                         </div>
                     </div>
                 </div>
-                <div class="description">
-                    <div class="switch">
-                        <div class="preserve"><a href="#">如何保存</a></div>
-                        <div class="yummy"><a href="#">怎麼吃最美味</a></div>
-                    </div>
-                    <div class="text">
-                        <p>以下是一些建議的保存方法：   </p>
-                        <ul>
-                            <li> 密封保存： 將純鮮奶吐司放入密封袋或保鮮盒中，以減少空氣流通，防止麵包變乾。確保密封器處於密封狀態，防止空氣進入。</li>
-                            <li>. 避免光照： 將吐司放在陰涼處，遠離陽光直射。陽光可能會使麵包表面變硬，同時影響內部的口感。</li>
-                            <li> 避免冷凍： 儘量避免將純鮮奶吐司冷凍，因為冷凍可能會影響麵包的質地和口感。如果計劃長時間保存，可以將吐司分切成小片，單層放在冷凍袋中，以便分次取用。</li>
-                            <li> 分開保存： 如果有多片吐司，可以考慮將它們分開保存，以防止它們相互粘附，影響口感。</li>
+                <div class="discription">
+                    <div class="tab-container">
+                        <input type="radio" id="tab-preserve" name="tab-title" checked>
+                        <input type="radio" id="tab-yummy" name="tab-title">
+                        <ul class="tab-title">
+                            <li><label for="tab-preserve" class="tabs-p">如何保存</label></li>
+                            <li><label for="tab-yummy" class="tabs-y">怎麼吃最美味</label></li>
                         </ul>
-                        <p>總的來說，密封、避光、遠離極端溫度是保存純鮮奶吐司的基本原則。按照這些建議，可以確保吐司在保存期間保持最佳的風味和質地。</p>
+                        <div class="text">
+                            <div class="preserve">
+                                <p>以下是一些建議的保存方法：   </p>
+                                <ul>
+                                    <li> 密封保存： 將純鮮奶吐司放入密封袋或保鮮盒中，以減少空氣流通，防止麵包變乾。確保密封器處於密封狀態，防止空氣進入。</li>
+                                    <li>. 避免光照： 將吐司放在陰涼處，遠離陽光直射。陽光可能會使麵包表面變硬，同時影響內部的口感。</li>
+                                    <li> 避免冷凍： 儘量避免將純鮮奶吐司冷凍，因為冷凍可能會影響麵包的質地和口感。如果計劃長時間保存，可以將吐司分切成小片，單層放在冷凍袋中，以便分次取用。</li>
+                                    <li> 分開保存： 如果有多片吐司，可以考慮將它們分開保存，以防止它們相互黏附，影響口感。</li>
+                                </ul>
+                                <p>總的來說，密封、避光、遠離極端溫度是保存純鮮奶吐司的基本原則。按照這些建議，可以確保吐司在保存期間保持最佳的風味和質地。</p>
+                            </div>
+                            <div class="yummy">
+                                <p>將純鮮奶吐司片夾上火腿、起司、生菜和番茄，製作出美味多層次的三明治。若想品嚐更多變化，不妨加入火雞肉、酪梨或蛋沙拉，搭配微焦的吐司更能增添美味！</p>
+                                <p>
+                                    想吃更豐盛的話，可將吐司切片，沾裹蛋液後煎至金黃，再搭配楓糖漿、新鮮水果或奶油等配料，打造一頓美味的法式早餐。
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
