--- a/products.html
+++ b/products.html
@@ -179,7 +179,7 @@
                                 <img src="https://picsum.photos/300/280/?random=10">
                             </div>
                             <div class="info">
-                                <h3>可可豆鮮奶手拿棒</h3>
+                                <h3>可可鮮奶手拿棒</h3>
                                 <div class="below">
                                     <span class="price">NT$80</span>
                                     <span class="shop">
