放圖片 新增js捲動功能

--- a/index.html
+++ b/index.html
@@ -3,27 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>home</title>
     <link rel="stylesheet" href="CSS/nav-footer.css">
     <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/home-style.css">
     <link rel="stylesheet" href="CSS/component-set.css">
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
+    <title>日光小麥所</title>
 </head>
 <body>
     <dic class="container">
         <div class="nav">
             <div class="logo">
-                <a href="#"><img src="https://picsum.photos/120/120/?random=10"></a>
+                <a href="index.html"><img src="images/logo/logo-white.svg"></a>
             </div>
             <div class="nav-bg">
                 <div class="select-area">
                     <ul>
-                        <li><a href="#">關於我們</a></li>
-                        <li><a href="#">最新消息</a></li>
-                        <li><a href="#">購買麵包</a></li>
-                        <li><a href="#">認識麵包</a></li>
-                        <li><a href="#">常見問題</a></li>
+                        <li><a href="about.html">關於我們</a></li>
+                        <li><a href="news.html">最新消息</a></li>
+                        <li><a href="products.html">購買麵包</a></li>
+                        <li><a href="introduce-bread.html">認識麵包</a></li>
+                        <li><a href="qna.html">常見問題</a></li>
                         <li><a href="#">
                             <i class="fa-solid fa-cart-shopping" style="color: #401202;"></i>
                         </a></li>
@@ -40,7 +40,7 @@
         <div class="wrap-home">
             <div class="concept">
                     <div class="concept-pic">
-                        <img src="https://picsum.photos/516/600/?random=10">
+                        <img src="images/home/home-comcept.png">
                         <div class="title">
                             <h1>用一餐麵包，享受片刻美好時光</h1>
                         </div>
@@ -53,9 +53,6 @@
             <div class="pick-up">
                 <h2>Pick-Up</h2>
                 <div class="item">
-                    <div class="pickup-pic">
-                        <img src="https://picsum.photos/570/400/?random=10">
-                    </div>
                     <div class="pickup-text">
                         <h3>栗子蒙布朗吐司</h3>
                         <p>融合了新鮮栗子的香濃滋味和吐司的綿密口感，打破了傳統吐司的框架，為前所未有的美味體驗。</p>
@@ -63,32 +60,36 @@
                 </div>
                 <div class="item">
                     <div class="pickup-pic">
-                        <img src="https://picsum.photos/570/400/?random=10">
+                        <img src="images/home/home-pickup-2.png">
+                        <div class="bread-pic-2"><img src="images/bread-illus/bread-4.png" alt=""></div>
                     </div>
                     <div class="pickup-text left">
                         <h3>藍莓貝果</h3>
                         <p>將新鮮多汁的藍莓融入麵糰，為您帶來藍莓的酸甜風味，與貝果獨特的口感完美結合。</p>
+                        <div class="bread-pic-3"><img src="images/bread-illus/bread-2.png" alt=""></div>
                     </div>
                 </div>
                 <div class="item">
                     <div class="pickup-pic">
-                        <img src="https://picsum.photos/570/400/?random=10">
+                        <img src="images/home/home-pickup-3.png">
                     </div>
                     <div class="pickup-text">
                         <h3>德國酸種麵包</h3>
                         <p>德國風酸種麵包，外皮酥脆，咬下去，麵包內部鬆軟帶有韌勁。天然酵母散發著微微酸味，勾勒出德國經典風味。</p>
                     </div>
                 </div>
-                <a href="#" class="more-btn">More</a>
+                <a href="products.html" class="more-btn">More</a>
+                <div class="bread-pic-4"><img src="images/bread-illus/bread-3.png" alt=""></div>
+                <div class="bread-pic-1"><img src="images/bread-illus/bread-1.png" alt=""></div>
             </div>
             <div class="news">
                 <h2>最新消息</h2>
                 <div class="news-wrap">
                     <a href="#" class="move-icon">
-                        <i class="fa-solid fa-circle-chevron-left fa-lg" style="color: #60222b;"></i>
+                        <img src="images/home/home-news-left.svg" alt=""></i>
                     </a>
                     <a href="#" class="card">
-                        <div class="pic"><img src="https://picsum.photos/367/251/?random=10"></div>
+                        <div class="pic"><img src="images/home/news-1.png"></div>
                         <h3>秋季新品！栗子蒙布朗吐司</h3>
                         <div class="below-info">
                             <div class="tag"><span class="new">New</span></div>
@@ -96,7 +97,7 @@
                         </div>
                     </a>
                     <a href="#" class="card">
-                        <div class="pic"><img src="https://picsum.photos/367/251/?random=10"></div>
+                        <div class="pic"><img src="images/home/news-2.png"></div>
                         <h3>美味多重享受！經典貝果組</h3>
                         <div class="below-info">
                             <div class="tag"><span class="discount">優惠</span></div>
@@ -104,7 +105,7 @@
                         </div>
                     </a>
                     <a href="#" class="card">
-                        <div class="pic"><img src="https://picsum.photos/367/251/?random=10"></div>
+                        <div class="pic"><img src="images/home/news-3.png"></div>
                         <h3>日光小麥所休息公告</h3>
                         <div class="below-info">
                             <div class="tag"><span class="inform">公告</span></div>
@@ -112,41 +113,42 @@
                         </div>
                     </a>
                     <a href="#" class="move-icon">
-                        <i class="fa-solid fa-circle-chevron-right fa-lg" style="color: #60222b;"></i>
+                        <img src="images/home/home-news-right.svg" alt=""></i>
                     </a>
         
                 </div>
-                <a href="#"  class="more-btn">More</a>
+                <a href="news.html"  class="more-btn">More</a>
             </div>
         </div>
         <div class="footer">
             <div class="footer-area">
-                <div class="foot-logo">
-                    <img src="https://picsum.photos/120/120/?random=10">
-                </div>
+                <a href="#" class="foot-logo">
+                    <img src="images/logo/logo-1113 2.svg">
+                </a>
                 <div class="foot-select">
                     <ul>
-                        <li><a href="#">關於我們</a></li>
-                        <li><a href="#">最新消息</a></li>
-                        <li><a href="#">購買麵包</a></li>
-                        <li><a href="#">認識麵包</a></li>
-                        <li><a href="#">常見問題</a></li>
+                        <li><a href="about.html">關於我們</a></li>
+                        <li><a href="news.html">最新消息</a></li>
+                        <li><a href="products.html">購買麵包</a></li>
+                        <li><a href="introduce-bread.html">認識麵包</a></li>
+                        <li><a href="qna.html">常見問題</a></li>
                     </ul>
                 </div>
             </div>
             <div class="copyright"><p>本網站為緯育TibaMe前端工程師班第88期學員專題作品平台僅供學習、展示之用。</p></div>
         </div>
-        <a href="#" class="to-top">
+        <a href="#" id="top" class="to-top close">
             <i class="fa-solid fa-circle-chevron-up" style="color: #60222b;"></i>
         </a>
         <div class="media">
             <a href="#" class="fb">
-                <i class="fa-brands fa-facebook" style="color: #60222b;"></i>
+                <i id="scroll-fb" class="fa-brands fa-facebook" ></i>
             </a>
             <a href="#" class="ig">
-                <i class="fa-brands fa-instagram" style="color: #60222b;"></i>
+                <i id="scroll-ig" class="fa-brands fa-instagram" ></i>
             </a>
         </div>
     </div>
+    <script src="JS/scrolled.js"> </script>
 </body>
 </html>
