--- a/news.html
+++ b/news.html
@@ -9,22 +9,22 @@
     <link rel="stylesheet" href="CSS/news-style.css">
     <link rel="stylesheet" href="CSS/component-set.css">
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
-    <title>news</title>
+    <title>最新消息 | 日光小麥所</title>
 </head>
 <body>
     <div class="container">
         <div class="nav">
             <div class="logo">
-                <a href="#"><img src="https://picsum.photos/120/120/?random=10"></a>
+                <a href="index.html"><img src="images/logo/logo-white.svg"></a>
             </div>
             <div class="nav-bg">
                 <div class="select-area">
                     <ul>
-                        <li><a href="#">關於我們</a></li>
-                        <li><a href="#">最新消息</a></li>
-                        <li><a href="#">購買麵包</a></li>
-                        <li><a href="#">認識麵包</a></li>
-                        <li><a href="#">常見問題</a></li>
+                        <li><a href="about.html">關於我們</a></li>
+                        <li><a href="news.html">最新消息</a></li>
+                        <li><a href="products.html">購買麵包</a></li>
+                        <li><a href="introduce-bread.html">認識麵包</a></li>
+                        <li><a href="qna.html">常見問題</a></li>
                         <li><a href="#">
                             <i class="fa-solid fa-cart-shopping" style="color: #401202;"></i>
                         </a></li>
@@ -44,36 +44,39 @@
             <div class="wrap-item">
                 <div class="bread-crumbs">
                     <ul>
-                        <li><a href="#">首頁</a></li>
+                        <li><a href="index.html">首頁</a></li>
                         <li><a>最新消息</a></li>
                     </ul>
                 </div>
+                <div class="bread-pic-1"><img src="images/bread-illus/bread-4.png" alt=""></div>
                 <div class="top-news">
+                    <div class="bread-pic-2"><img src="images/bread-illus/bread-5.png" alt=""></div>
+                    
                     <div class="news-info">
                         <h2 class="title">秋季新品 栗子蒙布朗吐司</h2>
-                        <div class="tag-time">
+                        <div class="tag">
                                 <span class="new">New</span>
                             <div class="time">2023.11.09</div>
                         </div>
                         <div class="text">
                             <p>在這金黃的秋季，我們帶給您一場味蕾的盛宴，誠摯邀請您品嚐我們的新品——栗子蒙布朗吐司。</p>
                             <p>這款吐司融合了新鮮栗子的香濃滋味和吐司的綿密口感，打破了傳統吐司的框架，帶給您前所未有的美味體驗</p></div>
-                        <a href="#" class="more-btn">More</a>
+                        <a href="news-detail.html" class="more-btn">More</a>
                     </div>
                     <div class="pic">
-                        <img src="https://picsum.photos/612/372/?random=10">
+                        <img src="images/news/news-lg-pic.png">
                     </div>
                 </div>
                 <div class="row">
                     <a href="#" class="col-md-4">
                         <div class="card">
                             <div class="pic">
-                                <img src="https://picsum.photos/367/256/?random=10">
+                                <img src="images/news/news-1.png">
                             </div>
                             <div class="news-info">
                                 <h3 class="title">美味多重享受！經典貝果組合</h3>
                                 <p class="text">本店驕傲推出貝果組合！原味、藍莓和蜜香紅茶三種口味搭配的經典組合...</p>
-                                <div class="tag-time">
+                                <div class="tag">
                                     <span class="discount">優惠</span>
                                     <div class="time">2023.10.25</div>
                                 </div>
@@ -82,13 +85,14 @@
                     </a>
                     <a href="#" class="col-md-4">
                         <div class="card">
-                            <div class="pic">
-                                <img src="https://picsum.photos/367/256/?random=10">
+                            <div class="pic samepic">
+                                <img src="images/news/news-2.png">
+                                <span>店家休息公告</span>
                             </div>
                             <div class="news-info">
                                 <h3 class="title">日光小麥所休息公告</h3>
                                 <p class="text">親愛的顧客，感謝您一直以來對我們的支持。日光小麥所將於10/16-10/22休...</p>
-                                <div class="tag-time">
+                                <div class="tag">
                                     <span class="inform">公告</span>
                                     <div class="time">2023.10.13</div>
                                 </div>
@@ -98,12 +102,12 @@
                     <a href="#" class="col-md-4">
                         <div class="card">
                             <div class="pic">
-                                <img src="https://picsum.photos/367/256/?random=10">
+                                <img src="images/news/news-3.png">
                             </div>
                             <div class="news-info">
                                 <h3 class="title">品嘗地中海風味-青醬佛卡夏</h3>
                                 <p class="text">迎接清新的風味饗宴——青醬佛卡夏！酥脆外皮包裹著濃郁的新鮮青醬，帶...</p>
-                                <div class="tag-time">
+                                <div class="tag">
                                     <span class="new">New</span>
                                     <div class="time">2023.10.05</div>
                                 </div>
@@ -112,13 +116,14 @@
                     </a>
                     <a href="#" class="col-md-4">
                         <div class="card">
-                            <div class="pic">
-                                <img src="https://picsum.photos/367/256/?random=10">
+                            <div class="pic samepic">
+                                <img src="images/news/news-2.png">
+                                <span>配送調整通知</span>
                             </div>
                             <div class="news-info">
                                 <h3 class="title">連假物流配送調整通知</h3>
                                 <p class="text">親愛的顧客，感謝您一直以來對我們的支持。在中秋和雙十國慶期間，由於...</p>
-                                <div class="tag-time">
+                                <div class="tag">
                                     <span class="inform">公告</span>
                                     <div class="time">2023.09.25</div>
                                 </div>
@@ -128,12 +133,12 @@
                     <a href="#" class="col-md-4">
                         <div class="card">
                             <div class="pic">
-                                <img src="https://picsum.photos/367/256/?random=10">
+                                <img src="images/news/news-4.png">
                             </div>
                             <div class="news-info">
                                 <h3 class="title">新品上市可可豆鮮奶手拿棒</h3>
                                 <p class="text">品味香醇，體驗獨特風味的可可豆鮮奶手拿棒！，酥脆的外皮包裹著濃郁的...</p>
-                                <div class="tag-time">
+                                <div class="tag">
                                     <span class="new">New</span>
                                     <div class="time">2023.09.18</div>
                                 </div>
@@ -142,13 +147,14 @@
                     </a>
                     <a href="#" class="col-md-4">
                         <div class="card">
-                            <div class="pic">
-                                <img src="https://picsum.photos/367/256/?random=10">
+                            <div class="pic samepic">
+                                <img src="images/news/news-2.png">
+                                <span>市集參加公告</span>
                             </div>
                             <div class="news-info">
                                 <h3 class="title">日光小麥所參加市集公告</h3>
                                 <p class="text">本店興奮地宣布，日光小麥所將參加9/9-9/10的八德文創市集！期間將展...</p>
-                                <div class="tag-time">
+                                <div class="tag">
                                     <span class="inform">公告</span>
                                     <div class="time">2023.09.01</div>
                                 </div>
@@ -157,32 +163,34 @@
                     </a>
                 </div>
                 <div class="pages">
+                    <div class="bread-pic-3"><img src="images/bread-illus/bread-1.png" alt=""></div>
                     <a class="current">1</a>
                     <a href="#">2</a>
                     <a href="#">3</a>
                     <a href="#">4</a>
                     <a href="#">5</a>
+                    <div class="bread-pic-4"><img src="images/bread-illus/bread-3.png" alt=""></div>
                 </div>
             </div>
         </div>            
         <div class="footer">
             <div class="footer-area">
-                <div class="foot-logo">
-                    <img src="https://picsum.photos/120/120/?random=10">
-                </div>
+                <a href="#" class="foot-logo">
+                    <img src="images/logo/logo-1113 2.svg">
+                </a>
                 <div class="foot-select">
                     <ul>
-                        <li><a href="#">關於我們</a></li>
-                        <li><a href="#">最新消息</a></li>
-                        <li><a href="#">購買麵包</a></li>
-                        <li><a href="#">認識麵包</a></li>
-                        <li><a href="#">常見問題</a></li>
+                        <li><a href="about.html">關於我們</a></li>
+                        <li><a href="news.html">最新消息</a></li>
+                        <li><a href="products.html">購買麵包</a></li>
+                        <li><a href="introduce-bread.html">認識麵包</a></li>
+                        <li><a href="qna.html">常見問題</a></li>
                     </ul>
                 </div>
             </div>
             <div class="copyright"><p>本網站為緯育TibaMe前端工程師班第88期學員專題作品平台僅供學習、展示之用。</p></div>
         </div>
-        <a href="#" class="to-top">
+        <a href="#" id="top" class="to-top close">
             <i class="fa-solid fa-circle-chevron-up" style="color: #60222b;"></i>
         </a>
         <div class="media">
@@ -194,5 +202,6 @@
             </a>
         </div>
     </div>
+    <script src="JS/scrolled.js"> </script>
 </body>
 </html>
