--- a/qna.html
+++ b/qna.html
@@ -8,22 +8,22 @@
     <link rel="stylesheet" href="CSS/qna-style.css">
     <link rel="stylesheet" href="CSS/component-set.css">
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
-    <title>qna</title>
+    <title>常見問題 | 日光小麥所</title>
 </head>
 <body>
     <div class="container">
         <div class="nav">
             <div class="logo">
-                <a href="#"><img src="https://picsum.photos/120/120/?random=10"></a>
+                <a href="index.html"><img src="images/logo/logo-white.svg"></a>
             </div>
             <div class="nav-bg">
                 <div class="select-area">
                     <ul>
-                        <li><a href="#">關於我們</a></li>
-                        <li><a href="#">最新消息</a></li>
-                        <li><a href="#">購買麵包</a></li>
-                        <li><a href="#">認識麵包</a></li>
-                        <li><a href="#">常見問題</a></li>
+                        <li><a href="about.html">關於我們</a></li>
+                        <li><a href="news.html">最新消息</a></li>
+                        <li><a href="products.html">購買麵包</a></li>
+                        <li><a href="introduce-bread.html">認識麵包</a></li>
+                        <li><a href="qna.html">常見問題</a></li>
                         <li><a href="#">
                             <i class="fa-solid fa-cart-shopping" style="color: #401202;"></i>
                         </a></li>
@@ -43,7 +43,7 @@
             <div class="wrap-item">
                 <div class="bread-crumbs">
                 <ul>
-                    <li><a href="#">首頁</a></li>
+                    <li><a href="index.html">首頁</a></li>
                     <li><a >常見問題</a></li>
                 </ul>
                 </div>
@@ -125,22 +125,22 @@
         </div>
         <div class="footer">
             <div class="footer-area">
-                <div class="foot-logo">
-                    <img src="https://picsum.photos/120/120/?random=10">
-                </div>
+                <a href="index.html" class="foot-logo">
+                    <img src="images/logo/logo-1113 2.svg">
+                </a>
                 <div class="foot-select">
                     <ul>
-                        <li><a href="#">關於我們</a></li>
-                        <li><a href="#">最新消息</a></li>
-                        <li><a href="#">購買麵包</a></li>
-                        <li><a href="#">認識麵包</a></li>
-                        <li><a href="#">常見問題</a></li>
+                        <li><a href="about.html">關於我們</a></li>
+                        <li><a href="news.html">最新消息</a></li>
+                        <li><a href="products.html">購買麵包</a></li>
+                        <li><a href="introduce-bread.html">認識麵包</a></li>
+                        <li><a href="qna.html">常見問題</a></li>
                     </ul>
                 </div>
             </div>
             <div class="copyright"><p>本網站為緯育TibaMe前端工程師班第88期學員專題作品平台僅供學習、展示之用。</p></div>
         </div>
-        <a href="#" class="to-top">
+        <a href="#" id="top" class="to-top close">
             <i class="fa-solid fa-circle-chevron-up" style="color: #60222b;"></i>
         </a>
         <div class="media">
@@ -152,5 +152,6 @@
             </a>
         </div>
     </div>
+    <script src="JS/scrolled.js"> </script>
 </body>
 </html>
