--- a/about.html
+++ b/about.html
@@ -8,22 +8,26 @@
     <link rel="stylesheet" href="CSS/about-style.css">
     <link rel="stylesheet" href="CSS/component-set.css">
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
-    <title>about</title>
-</head>
+    <title>關於我們 | 日光小麥所</title>
+</head> <link rel="stylesheet" href="CSS/nav-footer.css">
+    <link rel="stylesheet" href="CSS/normalize.css">
+    <link rel="stylesheet" href="CSS/home-style.css">
+    <link rel="stylesheet" href="CSS/component-set.css">
+    <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
 <body>
     <div class="container">
         <div class="nav">
             <div class="logo">
-                <a href="#"><img src="https://picsum.photos/120/120/?random=10"></a>
+                <a href="index.html"><img src="images/logo/logo-white.svg"></a>
             </div>
             <div class="nav-bg">
                 <div class="select-area">
                     <ul>
-                        <li><a href="#">關於我們</a></li>
-                        <li><a href="#">最新消息</a></li>
-                        <li><a href="#">購買麵包</a></li>
-                        <li><a href="#">認識麵包</a></li>
-                        <li><a href="#">常見問題</a></li>
+                        <li><a href="about.html">關於我們</a></li>
+                        <li><a href="news.html">最新消息</a></li>
+                        <li><a href="products.html">購買麵包</a></li>
+                        <li><a href="introduce-bread.html">認識麵包</a></li>
+                        <li><a href="qna.html">常見問題</a></li>
                         <li><a href="#">
                             <i class="fa-solid fa-cart-shopping" style="color: #401202;"></i>
                         </a></li>
@@ -40,17 +44,20 @@
             <h1>關於我們</h1>
         </div>
         <div class="wrap">
+            <div class="bread-pic-1"><img src="images/bread-illus/bread-3.png" alt=""></div>
+            <div class="bread-pic-2"><img src="images/bread-illus/bread-1.png" alt=""></div>
             <div class="wrap-item">
                 <div class="bread-crumbs">
                     <ul>
-                        <li><a href="#">首頁</a></li>
-                        <li><a href="#">關於我們</a></li>
+                        <li><a href="index.html">首頁</a></li>
+                        <li><a >關於我們</a></li>
                     </ul>
                 </div>
                 <div class="item">
+                    
                     <div class="first-pic">
-                        <img class="left-top" src="https://picsum.photos/204/204/?random=10">
-                        <img class="right-bottom" src="https://picsum.photos/281/281/?random=10">
+                        <img class="left-top" src="images/about/about-1.png">
+                        <img class="right-bottom" src="images/about/about-2.png">
                     </div>
                     <div class="first-text">
                         <h2>關於日光小麥所</h2>
@@ -59,10 +66,12 @@
                         從最基本的貝果和吐司開始，Amy漸漸地踏上了歐式麵包的烘焙之旅，製作了越來越多種類的麵包。在朋友和親人的鼓勵下，開始在網路上販賣麵包。
                         </p>
                     </div>
+                    <div class="bread-pic-3"><img src="images/bread-illus/bread-2.png" alt=""></div>
+                    <div class="bread-pic-4"><img src="images/bread-illus/bread-4.png" alt=""></div>
                 </div>
                 <div class="item">
                     <div class="pic">
-                        <img src="https://picsum.photos/400/300/?random=10">
+                        <img src="images/about/about-3.png">
                     </div>
                     <div class="second-text">
                         <p>〈日光小麥所〉的每個麵包都經過用心烘焙，精心製作而成，不僅僅是口感上的滿足，更是一場對品味的冒險。</p>
@@ -75,7 +84,7 @@
                     <p class="third-text">〈日光小麥所〉致力於為顧客提供健康、美味、以及經典的麵包， 用心烘焙，分享美味，讓每一餐都成為值得記憶的美好時光。
                     </p>
                     <div class="pic">
-                        <img src="https://picsum.photos/482/292/?random=10">
+                        <img src="images/about/about-4.png">
                     </div>
                 </div>
             </div>
@@ -83,21 +92,21 @@
         <div class="footer">
             <div class="footer-area">
                 <div class="foot-logo right-side">
-                    <img src="https://picsum.photos/120/120/?random=10">
+                    <img src="images/logo/logo-1113 2.svg">
                 </div>
                 <div class="foot-select">
                     <ul>
-                        <li><a href="#">關於我們</a></li>
-                        <li><a href="#">最新消息</a></li>
-                        <li><a href="#">購買麵包</a></li>
-                        <li><a href="#">認識麵包</a></li>
-                        <li><a href="#">常見問題</a></li>
+                        <li><a href="about.html">關於我們</a></li>
+                        <li><a href="news.html">最新消息</a></li>
+                        <li><a href="products.html">購買麵包</a></li>
+                        <li><a href="introduce-bread.html">認識麵包</a></li>
+                        <li><a href="qna.html">常見問題</a></li>
                     </ul>
                 </div>
             </div>
             <div class="copyright"><p>本網站為緯育TibaMe前端工程師班第88期學員專題作品平台僅供學習、展示之用。</p></div>
         </div>
-        <a href="#" class="to-top">
+        <a href="#" id="top" class="to-top close">
             <i class="fa-solid fa-circle-chevron-up" style="color: #60222b;"></i>
         </a>
         <div class="media">
@@ -109,5 +118,6 @@
             </a>
         </div>          
     </div>
+    <script src="JS/scrolled.js"> </script>
 </body>
 </html>
