--- a/news-detail.html
+++ b/news-detail.html
@@ -8,22 +8,22 @@
     <link rel="stylesheet" href="CSS/newsdetail-style.css">
     <link rel="stylesheet" href="CSS/component-set.css">
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
-    <title>news-detail</title>
+    <title>秋季新品 | 最新消息 | 日光小麥所</title>
 </head>
 <body>
     <div class="container">
         <div class="nav">
             <div class="logo">
-                <a href="#"><img src="https://picsum.photos/120/120/?random=10"></a>
+                <a href="index.html"><img src="images/logo/logo-white.svg"></a>
             </div>
             <div class="nav-bg">
                 <div class="select-area">
                     <ul>
-                        <li><a href="#">關於我們</a></li>
-                        <li><a href="#">最新消息</a></li>
-                        <li><a href="#">購買麵包</a></li>
-                        <li><a href="#">認識麵包</a></li>
-                        <li><a href="#">常見問題</a></li>
+                        <li><a href="about.html">關於我們</a></li>
+                        <li><a href="news.html">最新消息</a></li>
+                        <li><a href="products.html">購買麵包</a></li>
+                        <li><a href="introduce-bread.html">認識麵包</a></li>
+                        <li><a href="qna.html">常見問題</a></li>
                         <li><a href="#">
                             <i class="fa-solid fa-cart-shopping" style="color: #401202;"></i>
                         </a></li>
@@ -40,11 +40,13 @@
             <h1>最新消息</h1>
         </div>
         <div class="wrap">
+            <div class="bread-pic-1"><img src="images/bread-illus/bread-6.png" alt=""></div>
+            <div class="bread-pic-2"><img src="images/bread-illus/bread-1.png" alt=""></div>
             <div class="wrap-item">
                 <div class="bread-crumbs">
                     <ul>
-                        <li><a href="#">首頁</a></li>
-                        <li><a href="#">最新消息</a></li>
+                        <li><a href="index.html">首頁</a></li>
+                        <li><a href="news.html">最新消息</a></li>
                     </ul>
                 </div>
                 <div class="news-article">
@@ -58,9 +60,11 @@
                         <div class="time">2023.11.09</div>
                     </div>
                     <div class="pic">
-                        <img src="https://picsum.photos/1010/587/?random=10">
+                        <img src="images/new-detail/new-detail-lg.png">
+                        <div class="bread-pic-3"><img src="images/bread-illus/bread-3.png" alt=""></div>
                     </div>
                     <div class="text">
+                        <div class="bread-pic-4"><img src="images/bread-illus/bread-4.png" alt=""></div>
                         <p>在這金黃的秋季，我們帶給您一場味蕾的盛宴，誠摯邀請您品嚐我們的新品——栗子蒙布朗吐司。
                             這款吐司融合了新鮮栗子的香濃滋味和吐司的綿密口感，打破了傳統吐司的框架，帶給您前所未有的美味體驗。
                             </p>
@@ -83,22 +87,22 @@
         </div>       
         <div class="footer">
             <div class="footer-area">
-                <div class="foot-logo">
-                    <img src="https://picsum.photos/120/120/?random=10">
-                </div>
+                <a href="#" class="foot-logo">
+                    <img src="images/logo/logo-1113 2.svg">
+                </a>
                 <div class="foot-select">
                     <ul>
-                        <li><a href="#">關於我們</a></li>
-                        <li><a href="#">最新消息</a></li>
-                        <li><a href="#">購買麵包</a></li>
-                        <li><a href="#">認識麵包</a></li>
-                        <li><a href="#">常見問題</a></li>
+                        <li><a href="about.html">關於我們</a></li>
+                        <li><a href="news.html">最新消息</a></li>
+                        <li><a href="products.html">購買麵包</a></li>
+                        <li><a href="introduce-bread.html">認識麵包</a></li>
+                        <li><a href="qna.html">常見問題</a></li>
                     </ul>
                 </div>
             </div>
             <div class="copyright"><p>本網站為緯育TibaMe前端工程師班第88期學員專題作品平台僅供學習、展示之用。</p></div>
         </div>
-        <a href="#" class="to-top">
+        <a href="#" id="top" class="to-top close">
             <i class="fa-solid fa-circle-chevron-up" style="color: #60222b;"></i>
         </a>
         <div class="media">
@@ -110,5 +114,6 @@
             </a>
         </div>
     </div>
+    <script src="JS/scrolled.js"> </script>
 </body>
 </html>
