--- a/products.html
+++ b/products.html
@@ -9,22 +9,22 @@
     <link rel="stylesheet" href="CSS/products-style.css">
     <link rel="stylesheet" href="CSS/component-set.css">
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
-    <title>products</title>
+    <title>購買麵包 | 日光小麥所</title>
 </head>
 <body>
     <div class="container">
         <div class="nav">
             <div class="logo">
-                <a href="#"><img src="https://picsum.photos/120/120/?random=10"></a>
+                <a href="index.html"><img src="images/logo/logo-white.svg"></a>
             </div>
             <div class="nav-bg">
                 <div class="select-area">
                     <ul>
-                        <li><a href="#">關於我們</a></li>
-                        <li><a href="#">最新消息</a></li>
-                        <li><a href="#">購買麵包</a></li>
-                        <li><a href="#">認識麵包</a></li>
-                        <li><a href="#">常見問題</a></li>
+                        <li><a href="about.html">關於我們</a></li>
+                        <li><a href="news.html">最新消息</a></li>
+                        <li><a href="products.html">購買麵包</a></li>
+                        <li><a href="introduce-bread.html">認識麵包</a></li>
+                        <li><a href="qna.html">常見問題</a></li>
                         <li><a href="#">
                             <i class="fa-solid fa-cart-shopping" style="color: #401202;"></i>
                         </a></li>
@@ -44,24 +44,24 @@
             <div class="wrap-item">
                 <div class="bread-crumbs">
                     <ul>
-                        <li><a href="#">首頁</a></li>
+                        <li><a href="index.html">首頁</a></li>
                         <li><a>購買麵包</a></li>
                     </ul>
                 </div>
                 <div class="select-section">
                     <ul>
-                        <li><a href="#">手拿棒</a></li>
-                        <li><a href="#">貝果</a></li>
-                        <li><a href="#">德國麵包</a></li>
+                        <li><a href="#takeout">手拿棒</a></li>
+                        <li><a href="#bagel">貝果</a></li>
+                        <li><a href="#german-bread">德國麵包</a></li>
                         <li><a href="#">佛卡夏</a></li>
                     </ul>
                 </div>
-                <h2>吐司</h2>
+                <h2 id="toast">吐司</h2>
                 <div class="row">                    
                     <div class="col-12 col-md-3">
-                        <a href="#" class="card">
+                        <a href="products-detail.html" class="card">
                             <div class="pic">
-                                <img src="https://picsum.photos/300/280/?random=10">
+                                <img src="images/buy/buy-1.png">
                             </div>
                             <div class="info">
                                 <h3>純鮮奶吐司</h3>
@@ -77,7 +77,7 @@
                     <div class="col-12 col-md-3">
                         <a href="#" class="card">
                             <div class="pic">
-                                <img src="https://picsum.photos/300/280/?random=10">
+                                <img src="images/buy/buy-2.png">
                             </div>
                             <div class="info">
                                 <h3>純素藜麥吐司</h3>
@@ -90,26 +90,11 @@
                             </div>
                         </a>
                     </div> 
+                
                     <div class="col-12 col-md-3">
                         <a href="#" class="card">
                             <div class="pic">
-                                <img src="https://picsum.photos/300/280/?random=10">
-                            </div>
-                            <div class="info">
-                                <h3>亞麻籽吐司</h3>
-                                <div class="below">
-                                    <span class="price">NT$50</span>
-                                    <spaspan class="shop">
-                                        <i class="fa-solid fa-cart-shopping" style="color: #401202;"></i>
-                                    </span>
-                                </div>
-                            </div>
-                        </a>
-                    </div>
-                    <div class="col-12 col-md-3">
-                        <a href="#" class="card">
-                            <div class="pic">
-                                <img src="https://picsum.photos/300/280/?random=10">
+                                <img src="images/buy/buy-4.png">
                             </div>
                             <div class="info">
                                 <h3>橙香乳酪起司</h3>
@@ -124,7 +109,7 @@
                     <div class="col-12 col-md-3">
                         <a href="#" class="card">
                             <div class="pic">
-                                <img src="https://picsum.photos/300/280/?random=10">
+                                <img src="images/buy/buy-5.png">
                             </div>
                             <div class="info">
                                 <h3>栗子蒙布朗吐司</h3>
@@ -138,13 +123,13 @@
                         </a>
                     </div>
                 </div>
-                <h2>手拿棒</h2>
+                <h2 id="takeout">手拿棒</h2>
                 <div class="row">
 
                     <div class="col-12 col-md-3">
                         <a href="#" class="card">
                             <div class="pic">
-                                <img src="https://picsum.photos/300/280/?random=10">
+                                <img src="images/buy/buy2-1.png">
                             </div>
                             <div class="info">
                                 <h3>剝皮辣椒手拿棒</h3>
@@ -160,7 +145,7 @@
                     <div class="col-12 col-md-3">
                         <a href="#" class="card">
                             <div class="pic">
-                                <img src="https://picsum.photos/300/280/?random=10">
+                                <img src="images/buy/buy2-2.png">
                             </div>
                             <div class="info">
                                 <h3>柚子胡椒手拿棒</h3>
@@ -176,7 +161,7 @@
                     <div class="col-12 col-md-3">
                         <a href="#" class="card">
                             <div class="pic">
-                                <img src="https://picsum.photos/300/280/?random=10">
+                                <img src="images/buy/buy2-3.png">
                             </div>
                             <div class="info">
                                 <h3>可可鮮奶手拿棒</h3>
@@ -192,7 +177,7 @@
                     <div class="col-12 col-md-3">
                         <a href="#" class="card">
                             <div class="pic">
-                                <img src="https://picsum.photos/300/280/?random=10">
+                                <img src="images/buy/buy2-4.png">
                             </div>
                             <div class="info">
                                 <h3>墨西哥手拿棒</h3>
@@ -206,12 +191,12 @@
                         </a>
                     </div>
                 </div>
-                <h2>貝果</h2>
+                <h2 id="bagel">貝果</h2>
                 <div class="row">
                     <div class="col-12 col-md-3">
                         <a href="#" class="card">
                             <div class="pic">
-                                <img src="https://picsum.photos/300/280/?random=10">
+                                <img src="images/buy/buy3-1.png">
                             </div>
                             <div class="info">
                                 <h3>經典貝果組合</h3>
@@ -227,7 +212,7 @@
                     <div class="col-12 col-md-3">
                         <a href="#" class="card">
                             <div class="pic">
-                                <img src="https://picsum.photos/300/280/?random=10">
+                                <img src="images/buy/buy3-2.png">
                             </div>
                             <div class="info">
                                 <h3>原味貝果</h3>
@@ -243,7 +228,7 @@
                     <div class="col-12 col-md-3">
                         <a href="#" class="card">
                             <div class="pic">
-                                <img src="https://picsum.photos/300/280/?random=10">
+                                <img src="images/buy/buy3-3.png">
                             </div>
                             <div class="info">
                                 <h3>蜜香紅茶貝果</h3>
@@ -259,7 +244,7 @@
                     <div class="col-12 col-md-3">
                         <a href="#" class="card">
                             <div class="pic">
-                                <img src="https://picsum.photos/300/280/?random=10">
+                                <img src="images/buy/buy3-4.png">
                             </div>
                             <div class="info">
                                 <h3>藍莓貝果</h3>
@@ -275,7 +260,7 @@
                     <div class="col-12 col-md-3">
                         <a href="#" class="card">
                             <div class="pic">
-                                <img src="https://picsum.photos/300/280/?random=10">
+                                <img src="images/buy/buy3-5.png">
                             </div>
                             <div class="info">
                                 <h3>鹼水貝果</h3>
@@ -291,7 +276,7 @@
                     <div class="col-12 col-md-3">
                         <a href="#" class="card">
                             <div class="pic">
-                                <img src="https://picsum.photos/300/280/?random=10">
+                                <img src="images/buy/buy3-6.png">
                             </div>
                             <div class="info">
                                 <h3>濃情可可豆貝果</h3>
@@ -305,13 +290,13 @@
                         </a>
                     </div>
                 </div>
-                <h2>德國麵包</h2>
+                <h2 id="german-bread">德國麵包</h2>
                 <div class="row">
                     
                     <div class="col-12 col-md-3">
                         <a href="#" class="card">
                             <div class="pic">
-                                <img src="https://picsum.photos/300/280/?random=10">
+                                <img src="images/buy/buy4-1.png">
                             </div>
                             <div class="info">
                                 <h3>扭結麵包</h3>
@@ -327,7 +312,7 @@
                     <div class="col-12 col-md-3">
                         <a href="#" class="card">
                             <div class="pic">
-                                <img src="https://picsum.photos/300/280/?random=10">
+                                <img src="images/buy/buy4-2.png">
                             </div>
                             <div class="info">
                                 <h3>柏林人酸種麵包</h3>
@@ -343,7 +328,7 @@
                     <div class="col-12 col-md-3">
                         <a href="#" class="card">
                             <div class="pic">
-                                <img src="https://picsum.photos/300/280/?random=10">
+                                <img src="images/buy/buy4-3.png">
                             </div>
                             <div class="info">
                                 <h3>香料酸種麵包</h3>
@@ -359,7 +344,7 @@
                     <div class="col-12 col-md-3">
                         <a  href="#"class="card">
                             <div class="pic">
-                                <img src="https://picsum.photos/300/280/?random=10">
+                                <img src="images/buy/buy4-4.png">
                             </div>
                             <div class="info">
                                 <h3>德國酸種麵包</h3>
@@ -374,32 +359,34 @@
                     </div>                   
                 </div>
                 <div class="pages">
+                    <div class="bread-pic-2"><img src="images/bread-illus/bread-1.png" alt=""></div>
                     <a class="current">1</a>
                     <a href="#">2</a>
                     <a href="#">3</a>
                     <a href="#">4</a>
                     <a href="#">5</a>
+                    <div class="bread-pic-3"><img src="images/bread-illus/bread-3.png" alt=""></div>
                 </div>
             </div>
         </div>            
         <div class="footer">
             <div class="footer-area">
-                <div class="foot-logo">
-                    <img src="https://picsum.photos/120/120/?random=10">
-                </div>
+                <a href="#" class="foot-logo">
+                    <img src="images/logo/logo-1113 2.svg">
+                </a>
                 <div class="foot-select">
                     <ul>
-                        <li><a href="#">關於我們</a></li>
-                        <li><a href="#">最新消息</a></li>
-                        <li><a href="#">購買麵包</a></li>
-                        <li><a href="#">認識麵包</a></li>
-                        <li><a href="#">常見問題</a></li>
+                        <li><a href="about.html">關於我們</a></li>
+                        <li><a href="news.html">最新消息</a></li>
+                        <li><a href="products.html">購買麵包</a></li>
+                        <li><a href="introduce-bread.html">認識麵包</a></li>
+                        <li><a href="qna.html">常見問題</a></li>
                     </ul>
                 </div>
             </div>
             <div class="copyright"></div>
         </div>
-        <a href="#" class="to-top">
+        <a href="#" id="top" class="to-top close">
             <i class="fa-solid fa-circle-chevron-up" style="color: #60222b;"></i>
         </a>
         <div class="media">
@@ -411,5 +398,6 @@
             </a>
         </div>
     </div>
+    <script src="JS/scrolled.js"> </script>
 </body>
 </html>
