微調+整理文字

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div class="concept-pic">
                         <img src="images/home/home-comcept.png">
                         <div class="title">
-                            <h1>用一餐麵包，享受片刻美好時光</h1>
+                            <h2>用一餐麵包，享受片刻美好時光</h2>
                         </div>
                     </div>
                 <div class="concept-text">
@@ -53,8 +53,11 @@
             <div class="pick-up">
                 <h2>Pick-Up</h2>
                 <div class="item">
+                    <div class="pickup-pic">
+                        <img src="images/home/home-pickup-1.png">
+                        </div>
                     <div class="pickup-text">
-                        <h3>栗子蒙布朗吐司</h3>
+                        <h5>栗子蒙布朗吐司</h5>
                         <p>融合了新鮮栗子的香濃滋味和吐司的綿密口感，打破了傳統吐司的框架，為前所未有的美味體驗。</p>
                     </div>
                 </div>
@@ -64,7 +67,7 @@
                         <div class="bread-pic-2"><img src="images/bread-illus/bread-4.png" alt=""></div>
                     </div>
                     <div class="pickup-text left">
-                        <h3>藍莓貝果</h3>
+                        <h5>藍莓貝果</h5>
                         <p>將新鮮多汁的藍莓融入麵糰，為您帶來藍莓的酸甜風味，與貝果獨特的口感完美結合。</p>
                         <div class="bread-pic-3"><img src="images/bread-illus/bread-2.png" alt=""></div>
                     </div>
@@ -74,7 +77,7 @@
                         <img src="images/home/home-pickup-3.png">
                     </div>
                     <div class="pickup-text">
-                        <h3>德國酸種麵包</h3>
+                        <h5>德國酸種麵包</h5>
                         <p>德國風酸種麵包，外皮酥脆，咬下去，麵包內部鬆軟帶有韌勁。天然酵母散發著微微酸味，勾勒出德國經典風味。</p>
                     </div>
                 </div>
@@ -88,9 +91,9 @@
                     <a href="#" class="move-icon">
                         <img src="images/home/home-news-left.svg" alt=""></i>
                     </a>
-                    <a href="#" class="card">
+                    <a href="news-detail.html" class="card">
                         <div class="pic"><img src="images/home/news-1.png"></div>
-                        <h3>秋季新品！栗子蒙布朗吐司</h3>
+                        <h5>秋季新品！栗子蒙布朗吐司</h5>
                         <div class="below-info">
                             <div class="tag"><span class="new">New</span></div>
                             <div class="time">2023.11.09</div>
@@ -98,15 +101,18 @@
                     </a>
                     <a href="#" class="card">
                         <div class="pic"><img src="images/home/news-2.png"></div>
-                        <h3>美味多重享受！經典貝果組</h3>
+                        <h5>美味多重享受！經典貝果組</h5>
                         <div class="below-info">
                             <div class="tag"><span class="discount">優惠</span></div>
                             <div class="time">2023.10.25</div>
                         </div>
                     </a>
                     <a href="#" class="card">
-                        <div class="pic"><img src="images/home/news-3.png"></div>
-                        <h3>日光小麥所休息公告</h3>
+                        <div class="pic samepic">
+                            <img src="images/home/news-3.png">
+                            <span>店家休息公告</span>
+                        </div>
+                        <h5>日光小麥所休息公告</h5>
                         <div class="below-info">
                             <div class="tag"><span class="inform">公告</span></div>
                             <div class="time">2023.10.13</div>
