--- a/qna.html
+++ b/qna.html
@@ -48,10 +48,14 @@
                 </ul>
                 </div>
                 <div class="item">
+                    <input type="checkbox" id="question-1" name="question">
                     <div class="question">
-                        <h3>購買麵包是否需要註冊成為會員？</h3>
+                        <h5>購買麵包是否需要註冊成為會員？</h5>
                         <div class="icon">
+                            <label for="question-1" class="q-1">
                             <i class="fa-solid fa-minus" style="color: #60222b;"></i>
+                            <i class="fa-solid fa-plus" style="color: #60222b;"></i>
+                            </label>
                         </div>
                     </div>
                     <div class="answer">
@@ -63,7 +67,7 @@
                 </div>
                 <div class="item">
                     <div class="question">
-                        <h3>能否取消或修改訂單？</h3>
+                        <h5>能否取消或修改訂單？</h5>
                         <div class="icon">
                             <i class="fa-solid fa-minus" style="color: #60222b;"></i>
                         </div>
@@ -75,7 +79,7 @@
                 </div>
                 <div class="item">
                     <div class="question">
-                        <h3>訂購麵包後一般會幾天後到會貨呢?</h3>
+                        <h5>訂購麵包後一般會幾天後到會貨呢?</h5>
                         <div class="icon">
                             <i class="fa-solid fa-minus" style="color: #60222b;"></i>
                         </div>
@@ -86,7 +90,7 @@
                 </div>
                 <div class="item">
                     <div class="question">
-                        <h3>有哪些支付方式可以使用？</h3>
+                        <h5>有哪些支付方式可以使用？</h5>
                         <div class="icon">
                             <i class="fa-solid fa-minus" style="color: #60222b;"></i>
                         </div>
@@ -97,7 +101,7 @@
                 </div>
                 <div class="item">
                     <div class="question">
-                        <h3>有提供素食或特殊口味的麵包選擇嗎？</h3>
+                        <h5>有提供素食或特殊口味的麵包選擇嗎？</h5>
                         <div class="icon">
                             <i class="fa-solid fa-minus" style="color: #60222b;"></i>
                         </div>
@@ -108,7 +112,7 @@
                 </div>
                 <div class="item">
                     <div class="question">
-                        <h3>如何知道最新消息？</h3>
+                        <h5>如何知道最新消息？</h5>
                         <div class="icon">
                             <i class="fa-solid fa-minus" style="color: #60222b;"></i>
                         </div>
