--- a/products-detail.html
+++ b/products-detail.html
@@ -84,7 +84,7 @@
                             <div class="amount btn">
                                 <span class="minus"><i class="fa-solid fa-minus" style="color: #60222b;"></i>
                                 </span>
-                                <input type="numder" value="1" min="1" class="buy-number" >
+                                <input type="number" value="1" min="1" class="buy-number" >
                                 <span class="plus">
                                     <i class="fa-solid fa-plus" style="color: #60222b;"></i>
                                 </span>
